[fix]修正了树枝越末端反而越粗的问题

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
             <label for="branchAngle">Branch Angle: <span id="angleValue">25</span>°</label>
             <input type="range" id="branchAngle" min="10" max="45" value="25" />
           </div>
+          <div class="control-group">
+            <label for="branchThickness">Branch Thickness: <span id="thicknessValue">12</span></label>
+            <input type="range" id="branchThickness" min="5" max="20" value="12" />
+          </div>
         </div>
       </div>
 
